fixing broken, works now

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "adminjs-datatables-webpack",
   "version": "1.0.1",
   "description": "packup datatables with webpack",
+  "loader": "index.loader.js",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
